# nofib

./: README.md
helium-test-rust/: Cargo.toml
helium-test-rust/src/: main.rs
helium-timer-rust/: Cargo.toml
helium-timer-rust/src/: main.rs
imaginary/: .gitignore  Bernoulli.hs  Complex.hs  Debug.hs  DigitsOfE1.hs  DigitsOfE2.hs  EchoFloat.hs  EchoInt.hs  Exp3_8.hs  GenRegexps.hs  Integrate.hs  Nfib.hs  Paraffins.hs  Primes.hs  Queens.hs  Ratio.hs  Tak.hs  WheelSieve1.hs  WheelSieve2.hs  X2n1.hs  criterioncmp.sh  heliumtest.sh  heliumtimer.sh  simplify.12.06.2019.json
imaginary/cmp_outs/: Bernoulli.0.cmp  Bernoulli.1.cmp  Bernoulli.10.cmp  Bernoulli.12.cmp  Bernoulli.13.cmp  Bernoulli.14.cmp  Bernoulli.2.cmp  Bernoulli.4.cmp  Bernoulli.6.cmp  DigitsOfE1.10.cmp  DigitsOfE1.3.cmp  DigitsOfE1.4.cmp  DigitsOfE1.6.cmp  DigitsOfE1.7.cmp  DigitsOfE1.8.cmp  DigitsOfE1.9.cmp  DigitsOfE2.10.cmp  DigitsOfE2.2.cmp  DigitsOfE2.3.cmp  DigitsOfE2.4.cmp  DigitsOfE2.5.cmp  DigitsOfE2.6.cmp  DigitsOfE2.7.cmp  DigitsOfE2.8.cmp  DigitsOfE2.9.cmp
