[package]
name = "helium-timer-rust"
version = "0.1.0"
authors = ["Reinier Maas <ReinierMaas@Hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.2.11"
regex = "1.1.7"
lazy_static = "1.3.0"
serde_json = "1.0.39"
chrono = "0.4.6"
